--- a/preamble.tex
+++ b/preamble.tex
@@ -94,6 +94,7 @@
 \onehalfspacing
 
 % ============= TOC Customization =============
+\renewcommand{\contentsname}{Table of Contents}
 \renewcommand{\cftchapfont}{\bfseries}
 \renewcommand{\cftsecfont}{\normalfont}
 \setlength{\cftbeforechapskip}{10pt}
